tests/baselines/reference/requireOfJsonFileWithModuleNodeResolutionEmitNone.errors.txt
error TS5071: Option '--resolveJsonModule' can only be specified when module code generation is 'commonjs', 'amd', 'es2015' or 'esNext'.
tests/cases/compiler/file1.ts(1,1): error TS1148: Cannot use imports, exports, or module augmentations when '--module' is 'none'.


!!! error TS5071: Option '--resolveJsonModule' can only be specified when module code generation is 'commonjs', 'amd', 'es2015' or 'esNext'.
==== tests/cases/compiler/file1.ts (1 errors) ====
    import * as b from './b.json';
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot use imports, exports, or module augmentations when '--module' is 'none'.
    
==== tests/cases/compiler/b.json (0 errors) ====
    {
        "a": true,
        "b": "hello"
    }